# LearnFFmpeg

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cc000033/learnffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/cc000033/learnffmpeg/: MainActivity.java  VideoUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/cc000033/learnffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
